# CodeLens

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  get_models.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml
codelens-ui/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
codelens-ui/src/: App.tsx  api.ts  index.css
config/: settings.py
evals/: golden.json  metrics.py  run_eval.py
src/: app.py
src/api/: main.py  schemas.py
src/api/routers/: rag.py
src/generation/: llm_client.py
src/ingestion/: chunker.py  embedder.py  repo_loader.py
src/retrieval/: repo_registry.py  vector_store.py  vector_store_manager.py
tests/: conftest.py  test_api.py  test_chunker.py  test_eval_metrics.py  test_integration.py  test_llm_client.py  test_repo_registry.py  test_vector_store.py
