[project]
name = "codelens"
version = "0.1.0"
description = "RAG-based codebase Q&A system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "gitpython>=3.1.0",
    "tiktoken>=0.5.0",
    "streamlit>=1.30.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-language-pack>=1.8.1",
    "rank_bm25>=0.2.2",
    "loguru>=0.7.3",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
